# tracr

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/nlp/: Dockerfile
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/graph/: EntityPanel.css  EntityPanel.jsx  GraphExplorer.css  GraphExplorer.jsx
frontend/src/components/layout/: Sidebar.css  Sidebar.jsx  Topbar.css  Topbar.jsx
frontend/src/components/map/: MapExplorer.css  MapExplorer.jsx
frontend/src/pages/: EntitiesPage.jsx  GraphPage.jsx  MapPage.jsx  SourcesPage.jsx
frontend/src/styles/: globals.css
tracr/: config.py
tracr/api/: main.py  schemas.py
tracr/api/routers/: entities.py  graph.py  jobs.py  sources.py
tracr/db/: models.py  session.py
tracr/db/migrations/: env.py
tracr/db/migrations/versions/: 625c67ffd123_add_location_events_table.py  (+1 more)
tracr/geo/: cluster.py  exif.py  geoparser.py  ipgeo.py
tracr/graph/: driver.py  schema.py  sync.py
tracr/ingestion/: dedup.py  normalizer.py
tracr/ingestion/fetchers/: rss.py  shodan.py  whois.py
tracr/processing/: ner.py  processor.py  resolver.py
tracr/serving/: nlp_service.py
tracr/tasks/: __init__.py  geo.py  graph.py  ingestion.py  processing.py  scheduler.py
tracr/tests/: conftest.py  test_api.py  test_connectors.py  test_geo.py  test_graph.py  test_ner.py  test_nlp_service.py  test_normalizer.py  test_processor_http.py  test_scheduler.py
