[project]
name = "tracr"
version = "0.1.0"
description = "Open-source OSINT intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Yvan Hakizimana", email = "emmanuel.kanass@gmail.com" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "httpx>=0.27.0",
  "feedparser>=6.0.11",
  "celery[redis]>=5.4.0",
  "redis>=5.0.0",
  "spacy>=3.7.0",
  "python-dotenv>=1.0.0",
  "structlog>=24.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tracr/tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
